<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qmui_config_color_white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/aboutVersion"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/qmui_config_color_white"
            android:padding="20dp"
            android:text="@string/aboutUsDetail" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="个人主页：" />

            <TextView
                android:id="@+id/tv_about_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutWebsite"
                android:textColor="@android:color/holo_blue_light" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="联系电话：" />

            <TextView
                android:id="@+id/tv_about_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutPhone"
                android:textColor="@android:color/holo_blue_light" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/aboutWx" />

    </LinearLayout>

</LinearLayout>